# get_xmltvlisting

./: .gitignore  README.md  README_XMLTV_FETCH.md  pyproject.toml
.my_notes/: channels_networks_detected.csv  channels_parent_tokens.csv
IPTV/: Bell_Fibe[CA]-channels-9331.xml  Broadcast_LosAngeles_CA[US]-channels-10272.xml  Broadcast_LosAngeles_CA_US_channels_10272.xml  DirecTV[US]-channels-9329.xml  Manual_Channel_Review.csv  Rogers_Toronto_ON[CA]-channels-10270.xml  Rogers_Toronto_ON_CA_channels_10270.xml  Spectrum_NY[US]-channels-9330.xml  Telus_Optik_Vancouver_BC[CA]-channels-10269.xml  Telus_Optik_Vancouver_BC_CA_channels_10269.xml  Verizon_FIOS_NewYork_NY_US_channels_10273.xml  Xfinity_Chicago_IL[US]-channels-10271.xml  Xfinity_Chicago_IL_US_channels_10271.xml  channel_name_matrix.csv  channels.enriched.json  channels.json  lineups.csv  lineups.json  lineups.xml  match-for_anlysis-01-08-2025.xlsx  match-for_anlysis-manual_channel_review-01-08-2025.csv  networks_list.txt  remove_lists_CA.bak  remove_lists_US.txt  remove_summary.csv
config/: lineups.json
output/: channels_CA_Rogers.tsv  channels_CA_Telus.tsv  channels_US_Broadcast.tsv  channels_US_Verizon.tsv  channels_US_Xfinity.tsv  channels_merges_lineups+CA+US.xlsx
tools/: analyze_channels_overlap.py  apply_channel_mapping_to_channels_json.py  build_channel_mapping_from_manual_review.py  build_channel_overlap_remove_lists.py  build_keep_remove_report.py  build_keep_remove_report_v0_2_0.py  channels_inventory.bak  channels_inventory.py  channels_overlap_report.py  extract_channels.bak  extract_channels.py  (+18 more)
(+14 files in other folders)
